objects/vlocity_cmt__ConsoleActionLog__c.object
<CustomObject>
    <description>Console Action Log entries are posted from the Vlocity Console. Each Console Action Log entry stores raw information about the given user interaction including all the user clickstream events that happened during the interaction.  This information is later expanded to generate the Expanded Interaction Log entries.</description>
    <fields>
        <fullName>vlocity_cmt__InteractionEnd__c</fullName>
        <label>Interaction End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InteractionStart__c</fullName>
        <label>Interaction Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProcessedEventString__c</fullName>
        <label>Processed Event String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RawEventString__c</fullName>
        <label>Raw Event String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ReadyForArchival__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready For Archival</label>
        <type>Checkbox</type>
    </fields>
    <label>Console Action Log</label>
    <nameField>
        <displayFormat>{YY}{MM}{DD}-{00000}</displayFormat>
        <label>Console Action Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Console Action Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>